# BubbleFinder

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: bruteforce.yml  release-linux.yml
example/: bubblegun-HPRC-v1.1-Chr.-X-bubble.gfa  bubblegun-small-bubble.gfa
src/: bruteforce.py  fas.cpp  fas.h  main.cpp  superbubbles_bruteforce.cpp  test_snarls.py  ultrabubbles_bruteforce.cpp
src/io/: CMakeLists.txt  gbz_parser.hpp  gfa_parser.hpp  graph_io.cpp  graph_io.hpp
src/util/: CMakeLists.txt  clsd_interface.cpp  clsd_interface.hpp  context.cpp  context.hpp  logger.cpp  logger.hpp  mark_scope.hpp  mem_time.hpp  ogdf_all.hpp  timer.hpp
test_graphs/: self_loops.gfa
